--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </style>
 </head>
 <body>
-  <h1>🎓 ASTU Pre-Science GPA Calculator</h1>
+  <h1>🎓 ASTU Pre-Science's GPA Calculator</h1>
 
   <form id="gpaForm">
     <!-- Inputs will be inserted by JavaScript -->
