--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       background: linear-gradient(to right, #2193b0, #6dd5ed);
       color: #fff;
       margin: 0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
 
     h1 {
@@ -65,6 +68,15 @@
       margin: 8px 0;
     }
 
+    footer {
+      margin-top: auto;
+      text-align: center;
+      padding: 10px;
+      background: rgba(0, 0, 0, 0.3);
+      color: #eee;
+      font-size: 0.9em;
+    }
+
     @media (max-width: 600px) {
       form, .results {
         width: 90%;
@@ -81,6 +93,10 @@
   </form>
 
   <div class="results" id="results"></div>
+
+  <footer>
+    Powered by Unknown Team
+  </footer>
 
   <script>
     const subjects = [
@@ -129,6 +145,7 @@
       label.textContent = `${subject}:`;
       const input = document.createElement("input");
       input.type = "number";
+      input.step = "any"; // Allow real numbers
       input.min = 0;
       input.max = 100;
       input.required = true;
